# watermarker

./: Cargo.toml
.github/workflows/: rust.yml
src/: file_receiver.rs  lib.rs  main.rs  watermark.rs
