[package]
name = "watermarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = { version = "0.24.1", features = ["image", "file"] }
env_logger = "0.10.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp"] }
rfd = "0.12.1"
